--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "mssql": "^9.1.1",
     "pg": "^8.9.0",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
