--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
+    "ethernet-ip": "^1.2.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "mssql": "^9.1.1",
