--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "facerecognitionbrain-api",
+  "name": "recipe-dashboard-spi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ethernet-ip": "^1.2.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
