--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "mssql": "^9.1.1",
+    "path": "^0.12.7",
     "pg": "^8.9.0",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
